log.txt
/home/marina/GoEuro/GoEuroTest/test/authentication/login/login.js:1
(function (exports, require, module, __filename, __dirname) { import test from 'selenium-webdriver/testing';
                                                              ^^^^^^
SyntaxError: Unexpected token import
    at Object.exports.runInThisContext (vm.js:76:16)
    at Module._compile (module.js:528:28)
    at loader (/home/marina/GoEuro/GoEuroTest/node_modules/babel-register/lib/node.js:144:5)
    at Object.require.extensions.(anonymous function) [as .js] (/home/marina/GoEuro/GoEuroTest/node_modules/babel-register/lib/node.js:154:7)
    at Module.load (module.js:473:32)
    at tryModuleLoad (module.js:432:12)
    at Function.Module._load (module.js:424:3)
    at Module.require (module.js:483:17)
    at require (internal/module.js:20:19)
    at /home/marina/GoEuro/GoEuroTest/node_modules/mocha/lib/mocha.js:222:27
    at Array.forEach (native)
    at Mocha.loadFiles (/home/marina/GoEuro/GoEuroTest/node_modules/mocha/lib/mocha.js:219:14)
    at Mocha.run (/home/marina/GoEuro/GoEuroTest/node_modules/mocha/lib/mocha.js:487:10)
    at Object.<anonymous> (/home/marina/GoEuro/GoEuroTest/node_modules/mocha/bin/_mocha:458:18)
    at Module._compile (module.js:556:32)
    at Object.Module._extensions..js (module.js:565:10)
    at Module.load (module.js:473:32)
    at tryModuleLoad (module.js:432:12)
    at Function.Module._load (module.js:424:3)
    at Module.runMain (module.js:590:10)
    at run (bootstrap_node.js:394:7)
    at startup (bootstrap_node.js:149:9)
    at bootstrap_node.js:509:3
